# mortar

./: .gitignore  .style.yapf  README.md  TODO.md  flake.nix  noxfile.py  pyproject.toml  pyrightconfig.json  setup.cfg
lib/mktech/: .gitignore  flake.nix  noxfile.py  setup.cfg
lib/mktech/mktech/os/: __init__.py
lib/mktech/mktech/path/: __init__.py
lib/mktech/python/: pyproject.toml
lib/mktech/python/mktech/: validate.py
mktech/: config.py
mktech/validate/: __init__.py
mortar/: __init__.py  config.py  font.py  log.py  path.py  process.py  spectrum_multicrop.py  ssh.py  tesseract.py  util.py  video.py
mortar/examples/image/: gray.py
mortar/examples/pipeline/: multicrop.py  ocr.py
mortar/image/: __init__.py  detector.py  image.py  text.py  viewer.py
mortar/pipeline/: __init__.py  filter.py
python/: pyproject.toml
python-project/: pyproject.toml  setup.cfg
python-project/mortar/: __init__.py  cli.py  config.py  font.py  image.py  log.py  path.py  pipeline.py  process.py  ssh.py  tesseract.py  util.py  video.py
python-project/mortar/examples/image/: ocr.py  threshold.py
python-project/mortar/examples/pipeline/: advanced.py  basic.py
python-project/mortar/image/: __init__.py  detector.py  filter.py  image.py  ocr.py  text.py  threshold.py  viewer.py
python-project/mortar/pipeline/: __init__.py  filter.py
python-project/mortar/ui/: texture.py
python-project/test/: test_detector.py  test_image.py  test_jp.py  test_pipeline.py
python-project/test/data/jp/7thelnard/txt/: 7thelnard-01-05.txt
python-project/test/data/jp/aretha/txt/: aretha-01-07.txt  aretha-01-09.txt  aretha-01-12.txt  aretha-01-16.txt  aretha-01-17.txt
python-project/test/data/jp/aretha2/txt/: aretha2-01-04.txt  aretha2-01-06.txt
python-project/test/data/jp/bof/txt/: bof-01-10.txt  bof-01-18.txt  bof-01-20.txt
python-project/test/data/jp/bof2/txt/: bof2-01-07.txt  bof2-01-11.txt
python/mktech/: message.py
src/mortar/: __init__.py  cli.py  config.py  font.py  log.py  path.py  process.py  shell.py  ssh.py  tesseract.py  util.py  video.py
src/mortar/examples/image/: crop.py  invert.py  iog_jp_classifier.py  threshold.py
src/mortar/examples/pipeline/: __init__.py  advanced.py  multicrop.py  ocr.py
src/mortar/image/: __init__.py  detector.py  image.py  text.py  viewer.py
src/mortar/pipeline/: __init__.py  filter.py
test/: conftest.py  test_detector.py  test_image.py  test_jp.py  test_mort.py  test_pipeline.py
test/data/jp/7thelnard/txt/: 7thelnard-01-14.txt
test/data/jp/aretha/txt/: aretha-01-08.txt  aretha-01-10.txt  aretha-01-15.txt  aretha-01-18.txt  aretha-01-21.txt
test/data/jp/aretha2/txt/: aretha2-01-03.txt  aretha2-01-13.txt
test/data/jp/bof/txt/: bof-01-13.txt  bof-01-16.txt
test/data/jp/ff6/txt/: ff6-02-12.txt  ff6-02-18.txt
test/data/jp/rudra/txt/: rudra-01-02.txt  rudra-01-42.txt  rudra-01-50.txt  rudra-01-52.txt  rudra-01-57.txt
tests/: conftest.py  test_detector.py  test_image.py  test_jp.py  test_mort.py  test_pipeline.py
tests/data/jp/7thelnard/txt/: 7thelnard-01-10.txt
tests/data/jp/aretha/txt/: aretha-01-06.txt  aretha-01-11.txt
tests/data/jp/aretha2/txt/: aretha2-01-01.txt  aretha2-01-05.txt  aretha2-01-07.txt  aretha2-01-09.txt  aretha2-01-11.txt  aretha2-01-12.txt  aretha2-01-15.txt
tests/data/jp/bof/txt/: bof-01-03.txt  bof-01-11.txt  bof-01-15.txt  bof-01-42.txt
tests/data/jp/bof2/txt/: bof2-01-04.txt  bof2-01-08.txt  bof2-01-12.txt  bof2-01-14.txt
tests/data/jp/ff4/txt/: ff4-01-05.txt  ff4-01-10.txt  ff4-01-17.txt
tests/data/jp/ff6/txt/: ff6-01-08.txt  ff6-01-20.txt  ff6-02-02.txt  ff6-02-07.txt  ff6-02-21.txt
tests/data/jp/iog/txt/: image-0009.txt
tests/data/jp/rudra/txt/: rudra-01-11.txt  rudra-01-14.txt  rudra-01-18.txt  rudra-01-27.txt  rudra-01-45.txt  rudra-01-55.txt
