[project]
name = "mortar"
dynamic = ["version"]
description = "mortar"
authors = [
    {name = "Fritz Mahnke", email = "fritz@mahnke.tech"},
    {name = "Christopher Bebry", email = "invalidsyntax@gmail.com"},
]
dependencies = [
    "ipython>=8.29.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "tomlkit>=0.13.2",
    "numpy>=2.1.3",
    "mktech @ git+https://github.com/fmahnke/py-mktech@0.19.0",
    "click>=8.1.8",
]

requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[project.scripts]
mortar = "mortar.cli:main"
mortess = "mortar.tesseract:main"
mortvids = "mortar.video:main"

[tool.coverage.run]
branch = true
parallel = true
source = [ "src" ]

[tool.mypy]
explicit_package_bases = true
packages = [ "mortar", "tests" ]
exclude = "^src/mortar/examples"
strict = true

[tool.setuptools.package-data]
"mortar.examples.data" = ["*"]
"mortar.resources.fonts" = ["*"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "types-pillow>=10.2.0.20240822",
    "mktech-dev-tools[check,debug,doc,lsp-pyright,lsp-python-lsp-server] @ git+https://github.com/fmahnke/py-mktech-dev-tools@0.1.0",
]
