[project]
name = "mortar"
dynamic = ["version"]
description = "mortar"
authors = [
    {name = "Fritz Mahnke", email = "fritz@mahnke.tech"},
    {name = "Christopher Bebry", email = "invalidsyntax@gmail.com"},
]
dependencies = [
    "ipython>=8.29.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "tomlkit>=0.13.2",
    "mktech @ file:///${PROJECT_ROOT}/lib/mktech",
    "numpy>=2.1.3",
]

requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[project.scripts]
mortar = "mortar.cli:main"
mortess = "mortar.tesseract:main"
mortvids = "mortar.video:main"

[tool.coverage.run]
source = [ "src" ]

[tool.mypy]
explicit_package_bases = true
packages = [ "mortar", "tests" ]
exclude = "^src/mortar/examples"
strict = true

[tool.setuptools.package-data]
"mortar.examples.data" = ["*"]
"mortar.resources.fonts" = ["*"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/lib/mktech#egg=mktech",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "nox>=2024.10.9",
    "pdoc3>=0.11.1",
    "types-pillow>=10.2.0.20240822",
    "ipdb>=0.13.13",
    "python-lsp-server[all]>=1.12.0",
    "pylsp-mypy>=0.6.9",
    "pytest>=8.3.3",
    "python-lsp-isort>=0.2.1",
]
