[project]
name = "mortar"
version = "0.1.0"
description = "mortar"
authors = [
    {name = "Fritz Mahnke", email = "fritz@mahnke.tech"},
]
dependencies = [
    "pillow>=11.0.0",
    "tomlkit>=0.13.2",
]
requires-python = ">=3.10"
readme = "../README.md"
license = {text = "AGPL-3.0-or-later"}

[project.scripts]
mortess = "mortar.tesseract:main"
mortvids = "mortar.video:main"

[tool.coverage.run]
source = [ "mortar" ]

[tool.mypy]
explicit_package_bases = true
packages = [ "mortar", "test" ]

[tool.pytest.ini_options]
testpaths = [ "test" ]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "coverage>=7.6.4",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "nox>=2024.10.9",
    "pytest>=8.3.3",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
