[project]
name = "mortar"
version = "0.1.0"
description = "mortar"
authors = [
    {name = "Fritz Mahnke", email = "fritz@mahnke.tech"},
]
dependencies = [
    "ipython",
    "matplotlib",
    "mktech@git+https://github.com/spectrumbranch/mortar@pipeline#subdirectory=lib/mktech/python",
    "opencv-python",
    "pillow>=11.0.0",
    "PyOpenGL",
    "tomlkit>=0.13.2",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[project.scripts]
"mortar-cli" = "mortar.cli:main"
mortess = "mortar.tesseract:main"
mortvids = "mortar.video:main"

[tool.coverage.run]
source = [ "mortar" ]

[tool.mypy]
explicit_package_bases = true
packages = [ "mortar", "test" ]
exclude = "^mortar/examples"
strict = true

[[tool.mypy.overrides]]
module = 'OpenGL.*'
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [ "test" ]

[tool.setuptools.package-data]
"mortar.examples.data" = ["*"]
"mortar.resources.fonts" = ["*"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "coverage>=7.6.4",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "nox>=2024.10.9",
    "pdoc3",
    "pytest>=8.3.3",
    "types-pillow",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
