[project]
name = "mktech"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    #"tomlkit"
]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "mypy",
    "pytest"
]

[tool.coverage.run]
source = [ "mktech" ]

[tool.mypy]
packages = [ "mktech", "test" ]
strict = true

[tool.pytest.ini_options]
testpaths = [ "test" ]
